# BigYellowData

./: .env  .gitattributes  .gitignore  README.md  README_QUICK_START.md  docker-compose.yml  run_spark_docker.sh  setup_and_run.sh
docker/: Dockerfile
ex01_data_retrieval/: build.sbt
ex01_data_retrieval/src/main/scala/: Main.scala  SparkApp.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/src/main/scala/: SparkApp.scala
ex03_sql_table_creation/: README.md  aggregation.sql  build.sbt  creation.sql  insertion.sql  populate_dim_date.sql
ex03_sql_table_creation/src/main/scala/: SparkApp.scala
ex04_dashboard/dashboard/: Dockerfile  app.py  requirements.txt
ex05_ml_prediction_service/: README.md  pyproject.toml
ex05_ml_prediction_service/models/: taxi_price_model.joblib
ex05_ml_prediction_service/src/: README.md  app.py  data_loader.py  data_manager.py  inference.py  model_manager.py  train.py
ex05_ml_prediction_service/tests/: test_data.py  test_inference.py  test_train.py
ex06_airflow/: Dockerfile  README.md
ex06_airflow/dags/: nyc_taxi_pipeline.py
ex06_airflow/scripts/: run_exercise.sh
